Add sed patching of kustomize patch

--- a/config/default/manager_image_patch.yaml
+++ b/config/default/manager_image_patch.yaml
@@ -13,3 +13,7 @@ spec:
         app: runtime-controller
     spec:
       serviceAccount: runtime-controller
+      containers:
+      # gets changed by sed command when running `docker-build`
+      - image: ""
+        name: runtime-manager
